# awflip

./: go.mod  go.sum  main.go
cmd/: log.go  ls.go  new.go  read.go  root.go  shell.go  status.go  write.go
cmd/data/app_template/: Cargo.toml  README.md
lib/flipper/: flipper.go
