cargo-features = ["different-binary-name"]

[package]
name = "new_flipper_app"
version = "0.1.0"
edition = "2023"
rust-version = "1.74.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "new_flipper_app"
filename = "new_flipper_app.fap"
bench = false
test = false

[dependencies]
flipperzero = { version = "0.11.0" }
flipperzero-sys = { version = "0.11.0" }
flipperzero-rt = { version = "0.11.0" }
